renamed namespace to 'templer'.  So far this is only a change to the namespace and the namespace package, not to any actual code.
git-svn-id: https://svn.plone.org/svn/collective/templer.core/trunk@146718 db7f04ef-aaf3-0310-a811-c281ed44c4ad

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,5 +4,9 @@ Changelog
 0.1a1 (unreleased)
 ------------------
 
+- Namespace for package changed to 'templer' to promote use by systems outside 
+  the Zope world
+  [Cris Ewing]
+
 - Package created by ZopeSkel
   [Cris Ewing]
