* port over contributors list from zopeskel.  I don't know whose code might be in the bunch I've copied from zopeskel, so I'm just going to credit everyone.
* reflect the addition of structures in the changelog



git-svn-id: https://svn.plone.org/svn/collective/templer.core/trunk@227874 db7f04ef-aaf3-0310-a811-c281ed44c4ad

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,10 @@ Changelog
 0.1a1 (unreleased)
 ------------------
 
+- Added structure system for better isolation of shared structural elements and
+  improved maintainability
+  [Cris Ewing]
+
 - Namespace for package changed to 'templer' to promote use by systems outside 
   the Zope world
   [Cris Ewing]
