* fix some errors in README.txt * remove final references to the recipe template, now moved to templer.buildout * update changelog
git-svn-id: https://svn.plone.org/svn/collective/templer.core/trunk@228088 db7f04ef-aaf3-0310-a811-c281ed44c4ad

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Changelog
 1.0b-dev (unreleased)
 ---------------------
 
+- Moved zc.buildout template recipe into new package templer.buildout
+  [Cris Ewing]
+
 - Improved consistency of how templates treat 'long_description' in setup.py
   [Cris Ewing]
 
