finalize changes for 1.0b2 tag
git-svn-id: https://svn.plone.org/svn/collective/templer.core/trunk@228529 db7f04ef-aaf3-0310-a811-c281ed44c4ad

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Changelog
 1.0b-dev (unreleased)
 ---------------------
 
+1.0b2 December 8, 2010
+----------------------
+
 - Fixed bug in structure system that broke template rendering when a template 
   had no license 
   [Cris Ewing]
