--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
 [X] convert licence structures to structural vars so we can insert them at
     check_vars time instead of waiting until template run time (see profile var
     in templer.plone)
+
+[ ] readline support for templer questions
