* eliminate code to read 'vars' from compiled cheetah template files.
Templer has a more complex and full-featured vars system than paste, and this feature from the paste system, which prompted for any var values in a template, is unused.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Changelog
 1.0b5 (unreleased)
 ------------------
 
+- Remove unused code which read vars from compiled cheetah templates
+  [cewing]
 
 - Allow use of ``templer`` as a command for testing purposes
   [davisagli]
